--- a/src/bitcoin-tx-res.rc
+++ b/src/bitcoin-tx-res.rc
@@ -1,27 +1,28 @@
-#include <windows.h>             // needed for VERSIONINFO
-#include "clientversion.h"       // holds the needed client version information
+#include <windows.h>             // Required for VERSIONINFO
+#include "clientversion.h"       // Holds client version information
 
-#define VER_PRODUCTVERSION     CLIENT_VERSION_MAJOR,CLIENT_VERSION_MINOR,CLIENT_VERSION_REVISION,CLIENT_VERSION_BUILD
-#define VER_PRODUCTVERSION_STR STRINGIZE(CLIENT_VERSION_MAJOR) "." STRINGIZE(CLIENT_VERSION_MINOR) "." STRINGIZE(CLIENT_VERSION_REVISION) "." STRINGIZE(CLIENT_VERSION_BUILD)
-#define VER_FILEVERSION        VER_PRODUCTVERSION
-#define VER_FILEVERSION_STR    VER_PRODUCTVERSION_STR
+// Define version numbers
+#define VER_PRODUCTVERSION      CLIENT_VERSION_MAJOR,CLIENT_VERSION_MINOR,CLIENT_VERSION_REVISION,CLIENT_VERSION_BUILD
+#define VER_PRODUCTVERSION_STR  STRINGIZE(CLIENT_VERSION_MAJOR) "." STRINGIZE(CLIENT_VERSION_MINOR) "." STRINGIZE(CLIENT_VERSION_REVISION) "." STRINGIZE(CLIENT_VERSION_BUILD)
+#define VER_FILEVERSION         VER_PRODUCTVERSION
+#define VER_FILEVERSION_STR     VER_PRODUCTVERSION_STR
 
 VS_VERSION_INFO VERSIONINFO
-FILEVERSION     VER_FILEVERSION
-PRODUCTVERSION  VER_PRODUCTVERSION
-FILEOS          VOS_NT_WINDOWS32
-FILETYPE        VFT_APP
+ FILEVERSION      VER_FILEVERSION
+ PRODUCTVERSION   VER_PRODUCTVERSION
+ FILEOS           VOS_NT_WINDOWS32
+ FILETYPE         VFT_APP
 BEGIN
     BLOCK "StringFileInfo"
     BEGIN
-        BLOCK "040904E4" // U.S. English - multilingual (hex)
+        BLOCK "040904E4" // Language and code page: U.S. English, Windows-1252
         BEGIN
             VALUE "CompanyName",        "NoteCoin"
-            VALUE "FileDescription",    "notecoin-tx (CLI NoteCoin transaction editor utility)"
+            VALUE "FileDescription",    "notecoin-tx - Command Line NoteCoin Transaction Editor"
             VALUE "FileVersion",        VER_FILEVERSION_STR
             VALUE "InternalName",       "notecoin-tx"
             VALUE "LegalCopyright",     COPYRIGHT_STR
-            VALUE "LegalTrademarks1",   "Distributed under the MIT software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php."
+            VALUE "LegalTrademarks",    "MIT License - see COPYING or https://opensource.org/licenses/MIT"
             VALUE "OriginalFilename",   "notecoin-tx.exe"
             VALUE "ProductName",        "notecoin-tx"
             VALUE "ProductVersion",     VER_PRODUCTVERSION_STR
@@ -30,6 +31,6 @@ BEGIN
 
     BLOCK "VarFileInfo"
     BEGIN
-        VALUE "Translation", 0x0, 1252 // language neutral - multilingual (decimal)
+        VALUE "Translation", 0x0409, 1252  // English (United States), Code page 1252
     END
 END
