--- a/src/bitcoind-res.rc
+++ b/src/bitcoind-res.rc
@@ -1,5 +1,5 @@
-#include <windows.h>             // needed for VERSIONINFO
-#include "clientversion.h"       // holds the needed client version information
+#include <windows.h>
+#include "clientversion.h"
 
 #define VER_PRODUCTVERSION     CLIENT_VERSION_MAJOR,CLIENT_VERSION_MINOR,CLIENT_VERSION_REVISION,CLIENT_VERSION_BUILD
 #define VER_PRODUCTVERSION_STR STRINGIZE(CLIENT_VERSION_MAJOR) "." STRINGIZE(CLIENT_VERSION_MINOR) "." STRINGIZE(CLIENT_VERSION_REVISION) "." STRINGIZE(CLIENT_VERSION_BUILD)
@@ -14,22 +14,22 @@ FILETYPE        VFT_APP
 BEGIN
     BLOCK "StringFileInfo"
     BEGIN
-        BLOCK "040904E4" // U.S. English - multilingual (hex)
+        BLOCK "040904E4"
         BEGIN
-            VALUE "CompanyName",        "NoteCoin"
-            VALUE "FileDescription",    "notecoind (NoteCoin node with a JSON-RPC server)"
+            VALUE "CompanyName",        "NoteCoin Project"
+            VALUE "FileDescription",    "notecoind (NoteCoin full node and RPC server)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
             VALUE "InternalName",       "notecoind"
             VALUE "LegalCopyright",     COPYRIGHT_STR
-            VALUE "LegalTrademarks1",   "Distributed under the MIT software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php."
+            VALUE "LegalTrademarks",    "MIT License"
             VALUE "OriginalFilename",   "notecoind.exe"
-            VALUE "ProductName",        "notecoind"
+            VALUE "ProductName",        "NoteCoin Core Daemon"
             VALUE "ProductVersion",     VER_PRODUCTVERSION_STR
         END
     END
 
     BLOCK "VarFileInfo"
     BEGIN
-        VALUE "Translation", 0x0, 1252 // language neutral - multilingual (decimal)
+        VALUE "Translation", 0x0409, 1252
     END
 END
